--- a/Style/layout.css
+++ b/Style/layout.css
@@ -38,3 +38,11 @@
     margin-left: 200px;
     padding: 20px;
 }
+table{
+border: 1px solid black;
+border-collapse: collapse;
+}
+th, td{
+    border: 1px solid black;
+    padding: 1px;
+}
